@@ -1,5 +1,8 @@
 2003-08-14  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
+	* unix/tkUnixButton.c (TkpDisplayButton): Stopped accesses to NULL
+	* unix/tkUnixMenu.c (TkpDrawMenuEntry):   pointers that crashed tests.
+
 	TIP #109 IMPLEMENTATION FROM Brian Griffin <bgriffin@model.com>
 	* unix/tkUnixButton.c (TkpDrawCheckIndicator, TkpDisplayButton):
 	* unix/tkUnixMenu.c (DrawMenuEntryIndicator, TkpDrawMenuEntry):
